keydb/templates/webdis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webdis
  labels:
    app: webdis
    name: webdis
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webdis
      name: webdis
  template:
    metadata:
      name: webdis
      labels:
        app: webdis
        name: webdis
    spec:
      nodeSelector:
         cloud.google.com/gke-nodepool: "db-nodes"
      containers:
      - command: ["/usr/local/bin/webdis","/config/webdis.json"]
        name: webdis
        image: nicolas/webdis:latest
        ports:
        - containerPort: 7379
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /config
          name: config
      volumes:
        - name: config
          configMap:
            name: webdis
            items:
            - key: webdis.json
              path: webdis.json
      tolerations:
      - key: "persist-dbs"
        operator: "Equal"
        value: "true"
        effect: "NoExecute"
---
apiVersion: v1
kind: Service
metadata:
  name: webdissvc
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  ports:
  - port: 6380
    protocol: TCP
    targetPort: 7379
  selector:
    name: webdis
  type: ClusterIP
